adjusted delete photo and comment photo
