# service/api/like-api.go
@@ -61,76 +61,76 @@ func (rt *_router) unlikePhoto(w http.ResponseWriter, r *http.Request, ps httpro
 
 }
 
-/**
 func (rt *_router) checkLike(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
-	// Parse the photo id from the request
 	pid := ps.ByName("pid")
-	if pid != "" {
-		w.WriteHeader(http.StatusBadRequest);
-		return
-	}
 
-	// Parse the user id from the request
-	uid := ps.ByName("uid")
-	if uid != "" {
-		w.WriteHeader(http.StatusBadRequest);
-		return
-	}
-
-	// Check if user authorized
-	unauthorized, err := CheckAuthorizedId(r, uid)
-	if err != nil {
-		ctx.Logger.WithField("error", err).Error("Failed to check authorization")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-	if unauthorized {
+	if !CheckValidAuth(r) {
 		w.WriteHeader(http.StatusUnauthorized)
 		return
 	}
 
-	// Check if user liked the photo
-	_, err = rt.db.CheckLike(pid, uid)
+	uid := ps.ByName("uid")
+
+	isLiked, err := rt.db.CheckLike(uid, pid)
 	if err != nil {
-		ctx.Logger.WithField("error", err).Error("Failed to check if user liked the photo")
+		ctx.Logger.WithField("error", err).Error("Failed to check like")
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
 
+	responseData := struct {
+		IsLiked bool `json:"is_liked"`
+	}{
+		IsLiked: isLiked,
+	}
+
+	jsonData, err := json.Marshal(responseData)
+	if err != nil {
+		ctx.Logger.WithField("error", err).Error("Failed to marshal response data")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	_, err = w.Write(jsonData)
+	if err != nil {
+		ctx.Logger.WithField("error", err).Error("Failed to write response data")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
 }
-*/
 
 // Get Likes
 func (rt *_router) getLikes(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
-	// Parse the photo id from the request
 	pid := ps.ByName("pid")
-	if pid != "" {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
 
-	// Parse the user id from the request
-	uid := ps.ByName("uid")
-	if uid != "" {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	// Get the likes
-	likes, err := rt.db.GetLikes(pid)
+	likes, err := rt.db.GetLikeCount(pid)
 	if err != nil {
 		ctx.Logger.WithField("error", err).Error("Failed to get likes")
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
 
-	// Return the likes
-	err = json.NewEncoder(w).Encode(likes)
+	responseData := struct {
+		LikeCount int `json:"like_count"`
+	}{
+		LikeCount: likes,
+	}
+
+	jsonData, err := json.Marshal(responseData)
 	if err != nil {
+		ctx.Logger.WithField("error", err).Error("Failed to marshal response data")
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
 
+	w.Header().Set("Content-Type", "application/json")
+	_, err = w.Write(jsonData)
+	if err != nil {
+		ctx.Logger.WithField("error", err).Error("Failed to write response data")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
 }
